# unsloth-llama3-alpaca-lora

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  unsloth_llama3_alpaca_lora_train.ipynb
.github/: FUNDING.yml
scripts/: eval_adapter.py  hf_login.py  train_adapter.py
